# PathFinder-DSA

./: .gitignore  CMakeLists.txt  Graph-exp.cpp  README.md  maze.cpp  tasks.todo
src/: main.cpp
src/algorithms/: AStar.cpp  AStar.h  AlgorithmFactory.h  BFS.cpp  BFS.h  DFS.cpp  DFS.h  Dijkstra.cpp  Dijkstra.h  PathAlgorithm.h  PathResult.h
src/core/: AlgorithmInfo.h  AlgorithmType.h  Application.cpp  Application.h  Constants.h
src/graph/: Edge.h  Graph.cpp  Graph.h  Node.h
src/ui/: DrawAlgorithmMenu.h  HitTest.h  MapRenderer.cpp  MapRenderer.h
tests/: test_BFS.cpp  test_dfs.cpp
